# product-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.product/memory/: constitution.md
agents/: commander-product.md  inspector.md  officer-1-discovery.md  officer-2-strategy.md  officer-3-prioritization.md  officer-4-design.md  officer-5-delivery.md  officer-6-measurement.md  soldier-aarrr.md  soldier-assumption-testing.md  soldier-beta-program.md  soldier-cohort-analysis.md  soldier-controlled-experiment.md  soldier-design-sprint.md  soldier-dora-metrics.md  soldier-feature-flags.md  soldier-four-risks.md  soldier-gist.md  soldier-impact-effort.md  soldier-jtbd.md  soldier-kano.md  soldier-launch-readiness.md  soldier-market-sizing.md  soldier-north-star.md  soldier-okr.md  soldier-opportunity-scoring.md  soldier-opportunity-solution-tree.md  soldier-outcome-roadmap.md  soldier-product-analytics.md  soldier-product-market-fit.md  soldier-product-vision.md  soldier-prototyping.md  soldier-rice.md  soldier-shape-up.md  soldier-story-mapping.md  soldier-tech-debt-balance.md  soldier-usability-testing.md  soldier-user-interview.md
docs/: BENCHMARK_ENRICHMENT.md  RESEARCH.md
product_cli/: __init__.py  cli.py  integrations.py  runner_bridge.py  scaffolder.py
product_kit/: __init__.py  commander.py  inspector.py  mission.py  models.py  web.py
product_kit/officers/: __init__.py  officer_1_discovery.py  officer_2_strategy.py  officer_3_prioritization.py  officer_4_design.py  (+2 more)
tests/: __init__.py  conftest.py  test_mission_harness.py  test_structure.py
(+61 files in other folders)
